Prevent x-scrollbars

--- a/docs/style.css
+++ b/docs/style.css
@@ -2,6 +2,7 @@ body {
 	font-family: "Open Sans", "Helvetica Neue", "Helvetica", sans-serif;
 	text-align: center;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 a {
